Changed to fix scrollbars on IE7

--- a/theme/styles/ie.css
+++ b/theme/styles/ie.css
@@ -1,4 +1,4 @@
-html, body { overflow-x: visible; }
+html, body { overflow-x: auto; }
 
 .extract img, .single #content .post img { max-width: none; }
 
